# angle-builder

./: CODE_OF_CONDUCT.md  CONTACT.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml  test.yml
src/angle_builder/: __init__.py  angle.py  builder.py  depot_tools.py  storage.py
tests/: conftest.py  test_angle.py  test_depot_tools.py  test_storage.py
