[metadata]
name = angle-builder
description = Build and releases ANGLE binaries for different platforms
author = Kivy Team and other contributors
author_email = team@kivy.org
license = MIT
license_files = LICENSE
long_description = file: README.md
url = https://github.com/kivy/angle-builder
project_urls =
    Source = https://github.com/kivy/angle-builder/


platforms = any

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Topic :: Software Development :: Build Tools

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

python_requires = >=3.8

# install_requires =

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
dev =
    setuptools
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
     angle-builder = angle_builder.builder:run

[tool:pytest]
addopts =
    --cov angle_builder --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests


[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py